# s-t-challenge

./: .gitignore  README.md  instructions.md  product.md  prompts.md
data/product-engineering/: README.md  analyze.py  fine-dining-dataset.json  load_data.py  output.json  pyproject.toml  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  DashboardHeader.tsx  ErrorState.tsx  GuestCard.tsx  LoadingState.tsx  ReservationsList.tsx  StatisticsGrid.tsx
frontend/src/hooks/: useReservationFilters.ts  useReservations.ts
frontend/src/styles/: globals.css
frontend/src/types/: reservation.ts
frontend/src/utils/: reservationStats.ts  reservationTransform.ts
